--- a/interfaces/field.html
+++ b/interfaces/field.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">byte<wbr>Width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/struct.ts#L24">struct.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/struct.ts#L24">struct.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">read<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Reader</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/struct.ts#L25">struct.ts:25</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/struct.ts#L25">struct.ts:25</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">write<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Writer</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/struct.ts#L26">struct.ts:26</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/struct.ts#L26">struct.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -217,25 +217,28 @@
 						<a href="../modules.html#u8" class="tsd-kind-icon">U8</a>
 					</li>
 					<li class=" tsd-kind-function">
+						<a href="../modules.html#convertendian" class="tsd-kind-icon">convert<wbr>Endian</a>
+					</li>
+					<li class=" tsd-kind-function">
 						<a href="../modules.html#createfixedstruct" class="tsd-kind-icon">create<wbr>Fixed<wbr>Struct</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#formatbytelike" class="tsd-kind-icon">format<wbr>Byte<wbr>Like</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#littleendianbytestring" class="tsd-kind-icon">little<wbr>Endian<wbr>Byte<wbr>String</a>
-					</li>
-					<li class=" tsd-kind-function">
 						<a href="../modules.html#pad0x" class="tsd-kind-icon">pad0x</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#padzerotoevenlength" class="tsd-kind-icon">pad<wbr>Zero<wbr>ToEven<wbr>Length</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#pipe" class="tsd-kind-icon">pipe</a>
 					</li>
 					<li class=" tsd-kind-function">
+						<a href="../modules.html#prependzerotoevenlength" class="tsd-kind-icon">prepend<wbr>Zero<wbr>ToEven<wbr>Length</a>
+					</li>
+					<li class=" tsd-kind-function">
 						<a href="../modules.html#rm0x" class="tsd-kind-icon">rm0x</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#safepadzero" class="tsd-kind-icon">safe<wbr>Pad<wbr>Zero</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#startswith0x" class="tsd-kind-icon">starts<wbr>With0x</a>
