--- a/interfaces/formatoptions.html
+++ b/interfaces/formatoptions.html
@@ -79,6 +79,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="formatoptions.html#bytesize" class="tsd-kind-icon">byte<wbr>Size</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="formatoptions.html#convertendian" class="tsd-kind-icon">convert<wbr>Endian</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="formatoptions.html#le" class="tsd-kind-icon">le</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="formatoptions.html#pad0x" class="tsd-kind-icon">pad0x</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="formatoptions.html#rm0x" class="tsd-kind-icon">rm0x</a></li>
@@ -95,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">byte<wbr>Size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/utils.ts#L62">utils.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/utils.ts#L95">utils.ts:95</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -105,17 +106,32 @@
 					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="convertendian" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> convert<wbr>Endian</h3>
+					<div class="tsd-signature tsd-kind-icon">convert<wbr>Endian<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/utils.ts#L99">utils.ts:99</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>reverse input bytes, <code>BE -&gt; LE</code> or <code>LE -&gt; BE</code></p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="le" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> le</h3>
 					<div class="tsd-signature tsd-kind-icon">le<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/utils.ts#L67">utils.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/utils.ts#L103">utils.ts:103</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>little endian</p>
+							<p>marks the input as a little endian byte string</p>
 						</div>
 					</div>
 				</section>
@@ -125,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">pad0x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/utils.ts#L54">utils.ts:54</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/utils.ts#L87">utils.ts:87</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +156,7 @@
 					<div class="tsd-signature tsd-kind-icon">rm0x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/97da3b9/src/utils.ts#L58">utils.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/homura/easy-byte/blob/de2236d/src/utils.ts#L91">utils.ts:91</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -171,6 +187,9 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="formatoptions.html#bytesize" class="tsd-kind-icon">byte<wbr>Size</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="formatoptions.html#convertendian" class="tsd-kind-icon">convert<wbr>Endian</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="formatoptions.html#le" class="tsd-kind-icon">le</a>
@@ -243,25 +262,28 @@
 						<a href="../modules.html#u8" class="tsd-kind-icon">U8</a>
 					</li>
 					<li class=" tsd-kind-function">
+						<a href="../modules.html#convertendian" class="tsd-kind-icon">convert<wbr>Endian</a>
+					</li>
+					<li class=" tsd-kind-function">
 						<a href="../modules.html#createfixedstruct" class="tsd-kind-icon">create<wbr>Fixed<wbr>Struct</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#formatbytelike" class="tsd-kind-icon">format<wbr>Byte<wbr>Like</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#littleendianbytestring" class="tsd-kind-icon">little<wbr>Endian<wbr>Byte<wbr>String</a>
-					</li>
-					<li class=" tsd-kind-function">
 						<a href="../modules.html#pad0x" class="tsd-kind-icon">pad0x</a>
-					</li>
-					<li class=" tsd-kind-function">
-						<a href="../modules.html#padzerotoevenlength" class="tsd-kind-icon">pad<wbr>Zero<wbr>ToEven<wbr>Length</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#pipe" class="tsd-kind-icon">pipe</a>
 					</li>
 					<li class=" tsd-kind-function">
+						<a href="../modules.html#prependzerotoevenlength" class="tsd-kind-icon">prepend<wbr>Zero<wbr>ToEven<wbr>Length</a>
+					</li>
+					<li class=" tsd-kind-function">
 						<a href="../modules.html#rm0x" class="tsd-kind-icon">rm0x</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#safepadzero" class="tsd-kind-icon">safe<wbr>Pad<wbr>Zero</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#startswith0x" class="tsd-kind-icon">starts<wbr>With0x</a>
